# kwan_walking_controller

./: CMakeLists.txt  README.md  package.xml
function/: nmpc_func.c  nmpc_func.h
include/: avatar.h
nmpc_function/: NMPC_func.c  NMPC_func.h
setting/: setting_simulation_biped_walking.yaml  setting_simulation_gain.yaml  setting_wbik.yaml
src/: avatar.cpp
